# ChangeLog for app-emacs/gentoo-syntax
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/gentoo-syntax/ChangeLog,v 1.37 2009/03/08 22:18:51 ulm Exp $

  08 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/50gentoo-syntax-gentoo.el, gentoo-syntax-9999.ebuild:
  Set coding system for ebuilds and eclasses to utf-8.

  19 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  -gentoo-syntax-1.9.ebuild:
  clean up

  19 Feb 2009; nixnut <nixnut@gentoo.org> gentoo-syntax-1.11.ebuild:
  ppc stable #257695

  12 Feb 2009; Brent Baude <ranger@gentoo.org> gentoo-syntax-1.11.ebuild:
  stable ppc64, bug 257695

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> gentoo-syntax-1.11.ebuild:
  alpha/ia64/x86 stable wrt #257695

  06 Feb 2009; Tiago Cunha <tcunha@gentoo.org> gentoo-syntax-1.11.ebuild:
  stable amd64/sparc, bug 257695

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> gentoo-syntax-1.11.ebuild:
  Stable for HPPA (bug #257695).

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -gentoo-syntax-1.10.ebuild:
  clean up

*gentoo-syntax-1.11 (07 Jan 2009)

  07 Jan 2009; Ulrich Mueller <ulm@gentoo.org> +gentoo-syntax-1.11.ebuild:
  Version bump.

*gentoo-syntax-1.10 (27 Dec 2008)

  27 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +gentoo-syntax-1.10.ebuild:
  Version bump.

  28 Oct 2008; Christian Faulhammer <opfer@gentoo.org>
  -gentoo-syntax-1.8.ebuild:
  clean up

  27 Oct 2008; Brent Baude <ranger@gentoo.org> gentoo-syntax-1.9.ebuild:
  stable ppc64, bug 243100

  27 Oct 2008; Jeroen Roovers <jer@gentoo.org> gentoo-syntax-1.9.ebuild:
  Stable for HPPA (bug #243100).

  25 Oct 2008; nixnut <nixnut@gentoo.org> gentoo-syntax-1.9.ebuild:
  Stable on ppc wrt bug 243100

  24 Oct 2008; Raúl Porcel <armin76@gentoo.org> gentoo-syntax-1.9.ebuild:
  alpha/ia64 stable wrt #243100

  23 Oct 2008; Markus Meier <maekke@gentoo.org> gentoo-syntax-1.9.ebuild:
  amd64/x86 stable, bug #243100
