@@ -1,9 +1,7 @@
 AUX 51gentoo-syntax-gentoo.el 510 RMD160 85cb392d4ff4330b8502c99d6411406f17e882df SHA1 bd960089aace9bf5ca6bebba198a265986034fa9 SHA256 fc184b54749bbbf3ea888cd245d0d899ee2a8c97d9b4e803a0ecc1f6b18ea902
-DIST gentoo-syntax-1.10.tar.bz2 12956 RMD160 4958901b8b480091a30172709a582e2ba35f0e83 SHA1 d736d60c163f19fd3ac791bb8fb009d5c6bf1654 SHA256 04cf0953face959dd0f302f75f7c6196d05d4cfd388b27de70e79eabeacbaed9
 DIST gentoo-syntax-1.11.tar.bz2 13227 RMD160 f2c281c70516279db58b58d2e794bbd1bbd2262f SHA1 b65e21e91b1ffd2483a3f7061f8b85fabd1a0494 SHA256 5fa79d5769631cc89518c0c74eac111579b1606909d13ce17bf787972d6ac54d
-DIST gentoo-syntax-1.9.tar.bz2 12135 RMD160 ccf1793de60ec8eb3e9e5a0330c6372baf3ca580 SHA1 258449eb95fc8c2164e221631ccdebff72a375c7 SHA256 9467922c8c24d0eb29a317884a7cc9fe238115b4aa9f48d5ffd5049fa0a7e899
-EBUILD gentoo-syntax-1.10.ebuild 729 RMD160 d4646d6c59899564c85ba13a8f8d331314b6efea SHA1 a83c058437dc8ed8a5cd459eebfb75a4354916c1 SHA256 e742e4f5b9b8f497742af80a083e54e9546a0a783ce1043a016c91f65b3de827
+DIST gentoo-syntax-1.12.tar.bz2 13764 RMD160 d16fec796dcc15082e7d5232c1e862e9c751648f SHA1 cef3ac7345b2e4106cae172e84f34b423aee7723 SHA256 d9cf9fe7ff3dfa36ba667faf2069fbfb275429c50c4e9b7e0bf523f81a060cea
 EBUILD gentoo-syntax-1.11.ebuild 732 RMD160 fba480b362873fe5b394f8bddfe37435b5e5a1ec SHA1 404e6266a8b524469e0a3bf39cb368770e823994 SHA256 b8b2bf834ce2cb212a69d7f326fb3ae9276214b87639ea72741f34d9b7f9561f
-EBUILD gentoo-syntax-1.9.ebuild 729 RMD160 d96baf8337589ee61a2e7721a5f741180a629b73 SHA1 e9959310aa8c28bebb3713e7fdfe4cfe5b86d00a SHA256 783b4fa6bc4b02b82708a4f6e9215b6859db13faa1465eb4a86094ad652f057b
-MISC ChangeLog 8317 RMD160 2658c0c17312bca6a6385c4956bb05c560592f4b SHA1 77822bcf0a3674af44cc9b4ff3239979c3582d1c SHA256 cef3d55628d2c02109a386e44b8a384ece9c9593d95b044c05a28fc97cd1643d
+EBUILD gentoo-syntax-1.12.ebuild 729 RMD160 770460d75714794a86b3b578bfc3090765854f92 SHA1 c6ac36fec8ec39025a512f3494389a7c474b12c7 SHA256 7d99c218d9ea47c9f5472b1f31a9594414c4377bfb00bc3f96d0478c09c45fab
+MISC ChangeLog 8444 RMD160 0db1e7c3f4606920aa66b8057254d36e18cc40b8 SHA1 abdf69aed21fd7261d287cc5c271ee994ddff3da SHA256 729cd6566cf7704ee57c3a0a056901070bdde86904f4d24c663c7043ba836a1d
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
