@@ -1,24 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/gentoo-syntax/gentoo-syntax-1.9.ebuild,v 1.7 2008/10/27 22:50:44 ranger Exp $
-
-inherit elisp
-
-DESCRIPTION="Emacs modes for editing ebuilds and other Gentoo specific files"
-HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos"
-IUSE=""
-
-SITEFILE=51${PN}-gentoo.el
-DOCS="ChangeLog"
-
-pkg_postinst() {
-	elisp-site-regen
-
-	elog "Some optional features may require installation of additional"
-	elog "packages, like app-portage/gentoolkit-dev for echangelog."
-}
